--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -39,7 +39,7 @@ layout: default
                     <h5><a href="{{'/tags/' | prepend: site.baseurl }}">FEATURED TAGS</a></h5>
                     <div class="tags">
         				{% for tag in site.tags %}
-                            {% if tag[1].size > {{site.featured-condition-size}} %}
+                            {% if tag[1].size > site.featured-condition-size %}
                 				<a href="{{ site.baseurl }}/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
                                     {{ tag[0] }}
                                 </a>
@@ -49,13 +49,13 @@ layout: default
                 </section>
                 {% endif %}
 
-                <!-- Friends Blog -->
-                {% if site.friends %}
+                <!-- Recommended Blog -->
+                {% if site.links %}
                 <hr>
-                <h5>FRIENDS</h5>
+                <h5>RECOMMENDATIONS</h5>
                 <ul class="list-inline">
-                    {% for friend in site.friends %}
-                        <li><a href="{{friend.href}}">{{friend.title}}</a></li>
+                    {% for link in site.links %}
+                        <li><a href="{{link.href}}">{{link.title}}</a></li>
                     {% endfor %}
                 </ul>
                 {% endif %}
@@ -88,7 +88,7 @@ layout: default
                     <h5><a href="{{'/tags/' | prepend: site.baseurl }}">FEATURED TAGS</a></h5>
                     <div class="tags">
                         {% for tag in site.tags %}
-                            {% if tag[1].size > {{site.featured-condition-size}} %}
+                            {% if tag[1].size > site.featured-condition-size %}
                                 <a href="{{ site.baseurl }}/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">
                                     {{ tag[0] }}
                                 </a>
@@ -183,13 +183,13 @@ layout: default
                         </ul>
                     </div>
                 </section>
-                <!-- Friends Blog -->
-                {% if site.friends %}
+                <!-- Recommended Blog -->
+                {% if site.links %}
                 <hr>
-                <h5>FRIENDS</h5>
+                <h5>RECOMMENDATIONS</h5>
                 <ul class="list-inline">
-                    {% for friend in site.friends %}
-                        <li><a href="{{friend.href}}">{{friend.title}}</a></li>
+                    {% for link in site.links %}
+                        <li><a href="{{link.href}}">{{link.title}}</a></li>
                     {% endfor %}
                 </ul>
                 {% endif %}
